@@ -162,6 +162,8 @@ Library MASS
 - coding for 'sex' in ?Melanoma has been corrected.
 - the example for gamma.shape has a better starting points and so converges
 - avoid abbreviation of survreg(dist=) in example(gehan)
+- profile() and confint() methods for "glm" objects now handle
+  rank-deficient fits.
 
 
 
